--- a/index.html
+++ b/index.html
@@ -5,8 +5,9 @@
        <center> <b><i>Bold</i></b></center>
        <marquee>weee</marquee>
          <button id="hello" type="submit"></button>
+          &#x2192;
+//right arrow
          <a href="google.com">Link</a>
-         <<p>hi</p>
-         <img src="source.jpg">
-         
+         <p>hi</p>
+         <img src="meme.jpg">
 </html>
