--- a/index.html
+++ b/index.html
@@ -6,8 +6,16 @@
        <marquee>weee</marquee>
          <button id="hello" type="submit"></button>
           &#x2192;
-//right arrow
          <a href="google.com">Link</a>
-         <p>hi</p>
-         <img src="meme.jpg">
-</html>
+        &#x2190;
+        <br>&#x21E5;&#x21E7
+        <p>hi</p>
+         <img src="HI.JPG">
+         
+         <h2>Engineering Journal</h2>
+         <br>9/2/22:  I created a project in Tinkercad.  We learned how CAD can 
+         be used in order to create designs for Mechanical Engineering, along with some
+         safety.  We made a practice cad from a home appliance for a competition
+         that I won.
+         <img src="Thermometer.png">
+</html> 
