--- a/index.html
+++ b/index.html
@@ -16,6 +16,6 @@
          <br>9/2/22:  I created a project in Tinkercad.  We learned how CAD can 
          be used in order to create designs for Mechanical Engineering, along with some
          safety.  We made a practice cad from a home appliance for a competition
-         that I won.
+         that I won.<br>
          <img src="Thermometer.png">
 </html> 
