--- a/index.html
+++ b/index.html
@@ -18,4 +18,9 @@
          safety.  We made a practice cad from a home appliance for a competition
          that I won.<br>
          <img src="Thermometer.png">
+         
+        <br>  9/16/22:  We did a boat contest, that consisted of making paper boats on top of water.
+        Our boat lasted the 5 minute timer, at around 60 mg of weight.  Our boat was shaped like a box, and was able to 
+        hold more weight, but we chose to lessen the weight to ensure stability.
+        
 </html> 
