--- a/index.html
+++ b/index.html
@@ -29,12 +29,13 @@
         to create our machine.  We differed from our CAD as we were too ambitious with our CAD, and we needed to level out with our work ethics.
         Our machine worked almost immendiately, but our baloon fell and popped on its own before we were able to hit it.
         <br> 
-        <img src="TInkerCad.png">
         <br>
-        <source src="pop.MOV" type"video/mp4">
+        <video width="900" height="600" controls="" loop="">
+        <source src="Pop.mp4" type="video/mp4">
+        </video>
         <br> 9/30/22:  We dissected a laptop that was once used by CVHS.  We were not able to take out the hardrive on the first computer, and needed to work with another one.  When we started 
         to get towards the end of the project, we were met by some struggles that sourced from the main plate, which did not want to come out.
         <br> <img src="0.jpg">
         <br> 10/7/22:  We made a cad of a prosthetic part for an animal.  I created one for a horse leg up to the calf.  
-        <img src="Horse.png">
+       <br> <img src="Horse.png">
 </html> 
