--- a/index.html
+++ b/index.html
@@ -38,4 +38,9 @@
         <br> <img src="0.jpg">
         <br> 10/7/22:  We made a cad of a prosthetic part for an animal.  I created one for a horse leg up to the calf.  
        <br> <img src="Horse.png">
+        <br>
+        10/13/22:  We had started our lecture on aerospace engineering with our project being
+        a bottle rocket.  Our group is also starting to Cad this project and are planning on creating the real 
+        rocket next week.  We had a challenge which consisted of making paper 
+        airplanes, which mine did not work the best.
 </html> 
