--- a/index.html
+++ b/index.html
@@ -48,5 +48,8 @@
         <br><img src="filter.jpg">
         <br> 11/4/22:  We started learning about Electrical Engineering.  We used Tinkercad to create breadboards that helped to power a led light.  I created a switch and button that gave light to one of two switches depending on which way the switch was set to give power.  We learned about making LEDs in series and parallel as well.
         <br> <img src="breadboardW1.png">
-        
+        <br> 11/10/22: We started to use breadboards this week.  I was unable to take a picture of the actual breadboard, but we were able to make parallel lights and saw the results.
+        This week, we did a challenge, and we logically found out whether its better to take a math class or write numbers from 1-1,000,000.  My group wrote some code and found out that you would need an average of 0.09s per digit if you want to make writing numbers more efficient.
+        <br> <img src="Codedigit.png">
+       
 </html> 
