--- a/index.html
+++ b/index.html
@@ -51,5 +51,12 @@
         <br> 11/10/22: We started to use breadboards this week.  I was unable to take a picture of the actual breadboard, but we were able to make parallel lights and saw the results.
         This week, we did a challenge, and we logically found out whether its better to take a math class or write numbers from 1-1,000,000.  My group wrote some code and found out that you would need an average of 0.09s per digit if you want to make writing numbers more efficient.
         <br> <img src="Codedigit.png">
+        <br> 11/18/22: We coded with a real arduino in order to power lights.  We were also able to get a button to work, along with leds in sequence.
+        <br> 12/2/22:  We started to create our spaghetti bridge.  We tried to create an actual bridge with two sides and things in the center.  We did notice that we would later have troubles with removing the bridge from the cardboard, but we didn't have any other options at the time. We also decided that we would need the next session in order to fix the bridge and connect the ends together.
+        <br> <img src = "RealBridge.png">
+        <br> 12/9/22:  We ended up breaking the first bridge because it didn't come off the cardboard properly.  We also made a mistake in which a part of the spaghetti was submerged in glue, which ended up making it flexible and not break.  We then decided to test a bridge by adding over the reccomended limit.
+        <br> 
+        <br> 12/16/22:  We were able to test one of our bridges, which was able to withstand a bucket.  We also ended up using more than the reccomended amount of glue, but we noticed that the point of the project was about ratio, we decided that a heavier weight would be ok if it could withstand a higher ratio of water.
+        <br> <img src = "Final.png">
        
 </html> 
