--- a/index.html
+++ b/index.html
@@ -1,6 +1,24 @@
 <html>
     <h1>Bryson's<br> Website<h1>
          <h2>Engineering Journal</h2>
+         <br>
+
+    <button style="background:#3630a3; 
+    color:white;
+    border: none;
+    padding: 5px;
+    font-size: 31px;
+    height: 130px;
+    width: 130px;
+    box-shadow: 0 ;
+    cursor: pointer;
+    border-radius: 25%;
+    transition: all 0.2s ease;" 
+    onclick="getElementById('demo').innerHTML=Date()">What day is today?</button>
+        <p id="demo"></p>
+
+ 
+         
          <br>9/2/22:  I created a project in Tinkercad.  We learned how CAD can 
          be used in order to create designs for Mechanical Engineering, along with some
          safety.  We made a practice cad from a home appliance for a competition
@@ -58,5 +76,10 @@
         <br> 
         <br> 12/16/22:  We were able to test one of our bridges, which was able to withstand a bucket.  We also ended up using more than the reccomended amount of glue, but we noticed that the point of the project was about ratio, we decided that a heavier weight would be ok if it could withstand a higher ratio of water.
         <br> <img src = "Final.png">
+        <br> 1/13/23:  We started the year by working on understanding business engineering.  We came up with a potential product that we tried to propose to the class.  My group tried to come up with the idea of a security camera which would allow for facial recognition, locking the doors when someone approaches that is not the owner or someone registered.  It would link to an app that would also allow for people to get alerts whenever someone was detected.
+        <br> 1/18/23:  We learned about chemical engineering and what it entails.  We did a small challenge in which we came up with ideas of how to stop bromate for contaminating water.  Our group remembered how the Los Angeles lake added "shade balls" in order to stop this problem in the past.
+        <br> 1/27/23:  We started our project, with an Arduino car being the result.  We intend on making the car be remote controlled and be able to move in any direction the user inputs. We set up a build of materials along with a statement in order to present our project.
+        <br> 2/1/23:   We built a CAD for our Arduino car.  The car has clear borders in order to see the inside mechanics and how we plan on building the car.  We did not connect the wires, but we plan on making a small hole in the bottom of the cardboard in order to fish the wires through while still making it clean looking.
+        <br> <img src ="Arduino Car.png"
        
 </html> 
