--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     cursor: pointer;
     border-radius: 25%;
     transition: all 0.2s ease;" 
-    onclick="getElementById('demo').innerHTML=Date()">What day is today?</button>
+    onclick="getElementById('demo').innerHTML=Date()">What is the date?</button>
         <p id="demo"></p>
 
  
@@ -80,6 +80,24 @@
         <br> 1/18/23:  We learned about chemical engineering and what it entails.  We did a small challenge in which we came up with ideas of how to stop bromate for contaminating water.  Our group remembered how the Los Angeles lake added "shade balls" in order to stop this problem in the past.
         <br> 1/27/23:  We started our project, with an Arduino car being the result.  We intend on making the car be remote controlled and be able to move in any direction the user inputs. We set up a build of materials along with a statement in order to present our project.
         <br> 2/1/23:   We built a CAD for our Arduino car.  The car has clear borders in order to see the inside mechanics and how we plan on building the car.  We did not connect the wires, but we plan on making a small hole in the bottom of the cardboard in order to fish the wires through while still making it clean looking.
-        <br> <img src ="Arduino Car.png"
+        <br> <img src ="Arduino Car.png">
+        <br> 2/10/23:  We started to build our car in class today.  Since we didn't have our complete materials, we ended up creating a box that we assume will be large enough to fit in all of our materials.  We plan on getting the materials next week, but we are also unsure of exactly what materials we will end up having
+        <br> 2/17/23:  We had to change our design due to a lack of motors.  This led to us creating wheels using CDs.  However, the rest of our CAD should still be able to be completed properly.  We also started to try the code, and get the motor to run properly. 
+        <br> <img src ="wheels.jpg">
+        <br> 2/24/23:  We added the wheels to the car and started to work on the actual coding portion.  We were able to ge the card to drive straight on its own, but it started to steer to the right when we set it down.  We noticed that the motor wheels were wobling, but it would still shift to the right when we reversed the wheel itself.  \
+        <br> <img src ="car.jpg">
+        <br><video width="170" height="230" controls>
+            <source src ="spin.MOV" type= "video/3gp">
+            <source src ="spin.MOV" type= "video/mp4">
+            <source src ="spin.MOV" type= "video/ogg">
+            </video>
+        <br> 3/3/23:  We tested our car this week.  We were still unable to get the car to run with a remote control, along with not having the time to attach LEDs.  We also still noticed the drifting issue, but it was the last week we had to build the car, so we needed to just try it to see how it would work.  We did notice that our car had more design than many other cars, which indicated that we allocated more time to the build of the car compared to the actual mechanics and electronics.   
+        <br><video width="170" height="230" controls>
+            <source src ="Car-Final.MOV" type= "video/3gp">
+            <source src ="Car-Final.MOV" type= "video/mp4">
+            <source src ="Car-Final.MOV" type= "video/ogg">
+
+        </video>
+        <br> <img src="carbuild.jpg">
        
 </html> 
