--- a/index.html
+++ b/index.html
@@ -99,5 +99,11 @@
 
         </video>
         <br> <img src="carbuild.jpg">
-       
+       <br> 3/24/23:  We started to work on our next project, which was an Egg drop from the 3rd story.  We plan on using ballons to wrap around an egg, and taped it in order to provide support.  We also plan on taping a bottom section of the baloons in order to provide supporst for the baloon on impact, because are unsure on whether or not the baloon can pop on impact with the ground.
+       <br> 3/31/23:  We built our project and tested it this week. The egg did not pop, alogn with the baloon.  WE also noticed that our structure had bounced on impact, due to the baloons being our main flooring.  WE had also notived that unlike a few other groupsm our parachute held well, which we attribute to the fact that we added cut out a hole in the top in order to allow captured air to escape through the top instead of outward.
+       <br><video width="170" height="230" controls>
+            <source src ="BaloonDrop.mp4" type= "video/3gp">
+            <source src ="BaloonDrop.mp4" type= "video/mp4">
+            <source src ="BaloonDrop.mp4" type= "video/ogg">
+            </video>
 </html> 
