--- a/Contact.html
+++ b/Contact.html
@@ -37,8 +37,10 @@ color: green;
 font-size: 20px;
 font-family: Arial;
 font-weight: normal;
+border-radius: 10%;
 }
 </style>
-
+<h2>Email:</h2>
+<p>bvil536@gmail.com</p>
  
  </html>
