--- a/Contact.html
+++ b/Contact.html
@@ -1,4 +1,6 @@
    <html>
+           <body style="background-color: #c9c9c9">
+
  <div class="topnav">
   <a  href="index.html">Home</a>
   <a href="journal.html">Journal</a>
@@ -7,7 +9,7 @@
 
 <style type="text/css">
 .topnav {
-  background-color: #333;
+  background-color: #093556;
   overflow: hidden;
 }
 
