--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <html>
-    
+    <body style="background-color: #c9c9c9">
  <div class="topnav">
    <center>
   <a  href="index.html">Home</a>
@@ -10,7 +10,7 @@
 
 <style type="text/css">
 .topnav {
-  background-color: #333;
+  background-color: #093556;
   overflow: hidden;
 }
 
@@ -33,10 +33,10 @@
 </style>
 <center>
 
-    <h1>Bryson's Website<h1>
+    <h1>Bryson Villago<h1>
 
 
-    <button style="background:#3630a3; 
+    <button style="background:#9de7da ; 
     color:white;
     border: none;
     padding: 5px;
