--- a/journal.html
+++ b/journal.html
@@ -140,9 +140,9 @@
         <br> <h3><b>6/2/23</b></h3><p></p>  This week, we tested our boat.  We noticed that the tape was starting to peel off of the cardboard, but we didn't think much of it, sticking it back on the cardboard.  When it was time for our members to get in, we started off by getting Nathan to get into the boat.  He was able to get on fine, but when he shifted towards the from of the boat, the tape had separated from the base of the cardboard, which led the boat to sink.  We still proceeded on by dragging the boat across the surface of the water, but overall, we failed to create a working boat.  We had also noted that there were not many groups that had problems with the tape separating, so we believe that the separation was due to our group finishing the project early and before most of the other groups, which allowed time for the tape to separate from the cardboard.  Along with this, there was a possibility that the tape was sticking on to the dust and dirt that was on the cardboard, which made the bond of the tape weaker.
         <br>
         <video  width="170" height="230" controls>
-        <source src ="test.mp4" type= "video/3gp">
-        <source src ="test.mp4" type= "video/mp4">
-        <source src ="test.mp4" type= "video/ogg">
+        <source src ="boatFinal.mp4" type= "video/3gp">
+        <source src ="boatFinal.mp4" type= "video/mp4">
+        <source src ="boatFinal.mp4" type= "video/ogg">
         </video>
  </html>
      
